# PICUPVMASTER_juanferv

./: README.md  demo.gds  pyproject.toml  python_file.py  test_gdsfactory.ipynb
gds/: DIE_MAIN_24_9_2024_PICUPV.gds
src/MAIN/: PDKlib.py  __init__.py  component_placement.py  main.py
src/TEST/: __init__.py  component_placement.py  main.py
